src/test/deca/context/valid/ContextAvecObjet/Cast/BextendsA_AnewB.deca
//Description
//  Déclarer une variable de classe A avec newB() où B extends A
//
//Résultat
//  ok

class A{}
class B extends A{}
{
    A a = new B();
}