src/test/deca/context/invalid/ContextAvecObjet/Cast/castAindeC.deca
//Description
//  Cast de deux variables indépendantes
//
//Résultat
//  Erreur contextuelle ligne 12
//  A ne peut être cast en C

class A{}
class B{}
class C extends B{}
{
    C c = new A();
}